# LIM

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  RESERVED_WORDS.txt  bug-list.txt  docs.md  stage-original.lua  version.h.in
.github/: FUNDING.yml
docs/: README.md  a-historia.md  bandeiras.md  codigos-de-erro.md  como-o-lim-funciona.md  compactacao-explicada.md  compaction-explanation.md  compaction-rules.md  error-code-list.md  flags-instructions.md  o-header-lim.md  regras-da-compactacao.md  the-header-lim.md
info/: README.md  RESERVED_WORDS.txt
info/pt-br/: README-info.ptbr.md  README-main.ptbr.md
src/: README.md  arg.c  buffers.c  check-flags.c  compaction-process.c  content-treatment.c  defines.h  defs.h  errors.c  errors.h  flags.c  flags.h  functions.h  global.c  global.h  head.h  header.c  heads.h  informations.c  input.c  main.c  main.h  master.c  memory-manipulation.c  queuePointer.c  queuePointer.h  stage-product.c  stages.c  struct.h  sub-heads.h  tmpfile.c  tools-general.c  tools-to-stages.c  tools.c  variables.h  write.c
src/args/: check-and-treat.c  check-and-treat.h  check.c  check.h  help.c  help.h  process-master.c  process-master.h  treat.c  treat.h
src/args/fatal/: error.h  info.h
src/args/flags/: cmp.c  cmp.h  list.h  man.c
src/args/print/: error.h  flags-in-define.h  flags-in-function.h  help.c  help.h  verbose.c  verbose.h
src/args/rules/: check-and-treat.c  check-and-treat.h  flag-man.c  flag-man.h  flags.h
src/buf-man/: README.md  bin-tree.c  convert-tree-to-queue.c  indexes.h  methods.h  queue.c  source-buffers.c  struct.h
src/buffers/: file-cursor.c
src/cmake-h/: version.h  version.h.in
src/core/: check-content.c  check-content.h  ident-man.c  ident-man.h  layer-env.c  layer-env.h  lim-global-variables.c  lim-global-variables.h  nick-man.c  nick-man.h  process-master.c  process-master.h  read-header-file.c  read-header-file.h  tools.c  tools.h  treat.c  treat.h
src/core/buf-man/: bin-tree.c  buf-man.h  convert-tree-to-queue.c  queue.c
src/core/check-content/: check-content.h  const.c  ident.c
src/core/compaction-process/: check-content.c  check-content.h  ident-man.c  ident-man.h  nickname.h  process-master.c  process-master.h  todo  treat.c  treat.h
src/core/header-lim/: out-status.h  read.c  read.h
src/core/tools/: lim-global-variables.c  lim-global-variables.h  nickname.c  nickname.h  queue.c  queue.h  read-header-lim.c  read-header-lim.h  string-plus.c  string-plus.h  string.c  string.h  verbose.c  verbose.h
src/interface/: lim-global-variables.h  main.c
src/interface/args/: README.md  check-and-treat.c  check-and-treat.h  flag-man.h  flags.h
src/master/: lim-global-variables.h  main.c
src/messages/: errors.c  errors.h  flags.c  flags.h  head.h
src/print-text/: errors.c  informations.c  sub-heads.h
src/read/: collect.c  dstr.c  dstr.h  head.h  input.c  input.h  start.c  start.h
tests/: run
tests/scripts/: create-main  debug-common.h  start-tests
tests/scripts/.tmp/: exe  main.c
tests/scripts/args/: args  argss  files  includes  main.c
tests/scripts/buf-man/: args  files  includes  main.c
tests/scripts/comp-proc/: files  includes  main.c
tests/scripts/compact/: files  includes  main.c
tests/scripts/header/: files  main.c
tests/scripts/header-lim/: files  includes  main.c
tests/scripts/queue/: files  includes  main.c
tests/scripts/string+nickname/: files  includes  main.c
(+12 files in other folders)
